# myeq

./: .gitignore  CMakeLists.txt  gstmyeq.c  gstmyeq.h
